# Ods2

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  NDFF.html  README  README.md  how_to_build.html  setup_windows_env.bat  top.pro
examples/: CMakeLists.txt  Invoice.cpp  Invoice.hpp  Invoice.ods  InvoiceItem.cpp  InvoiceItem.hpp  examples.pro  examples1.cc  examples1.hh  examples2.cc  examples2.hh  main.cpp  util.cc  util.hh
examples/test_files/: Boolean.ods  CellSpan.ods  ColumnWidths.ods  Font.ods  Formula.ods  Image.ods  Percentage.ods  RowHeight.ods  Time.ods  VAlignment.ods  VisualBreak.ods
libzip/: CMakeLists.txt  libzip.pro
libzip/examples/: autoclose-archive.c
libzip/lib/: compat.h  config.h  zip.h  zip_libzip_version.c  zip_source_file_stdio_named.c  zip_source_file_win32_utf8.c  zipint.h
ods/: .CMakeLists.txt.kate-swp  Address.cpp  Address.hpp  Attr.cpp  Attr.hpp  AutoDelete.hh  Book.cpp  Book.hpp  ByteArray.cpp  ByteArray.hpp  CMakeLists.txt  Cell.cpp  Cell.hpp  CellRef.cpp  CellRef.hpp  Color.cpp  Color.hpp  Duration.cpp  Duration.hpp  DurationInfo.cpp  DurationInfo.hpp  Formula.cpp  Formula.hpp  FormulaError.cpp  FormulaError.hpp  FormulaNode.cpp  FormulaNode.hpp  Function.cpp  Function.hpp  HAlign.cpp  HAlign.hpp  Length.cpp  Length.hpp  LineStyle.cpp  LineStyle.hpp  Master.cpp  Master.hpp  Ns.cpp  Ns.hpp  Prefix.cpp  (+61 more)
ods/attr/: Border.cpp  Border.hpp  FoFontStyle.cpp  FoFontStyle.hpp  FoFontWeight.cpp  FoFontWeight.hpp  StyleBorderLineWidth.cpp  StyleBorderLineWidth.hpp  StyleTextUnderlineColor.cpp  StyleTextUnderlineColor.hpp  StyleTextUnderlineWidth.cpp  StyleTextUnderlineWidth.hpp  VisualBreak.cpp  VisualBreak.hpp  decl.hxx
ods/formula/: CellRef.cpp  CellRef.hpp  Node.cpp  Node.hpp  Value.cpp  Value.hpp  decl.hxx  node.hxx
ods/inst/: Abstract.cpp  Abstract.hpp  DcDate.cpp  DcDate.hpp  DcTitle.cpp  DcTitle.hpp  DrawFrame.cpp  DrawFrame.hpp  DrawImage.cpp  DrawImage.hpp  ManifestFileEntry.cpp  ManifestFileEntry.hpp  ManifestManifest.cpp  ManifestManifest.hpp  MetaCreationDate.cpp  MetaCreationDate.hpp  MetaDocumentStatistic.cpp  MetaDocumentStatistic.hpp  MetaEditingCycles.cpp  MetaEditingCycles.hpp  MetaEditingDuration.cpp  MetaEditingDuration.hpp  MetaGenerator.cpp  MetaGenerator.hpp  MetaTemplate.cpp  MetaTemplate.hpp  NumberBoolean.cpp  NumberBoolean.hpp  NumberBooleanStyle.cpp  NumberBooleanStyle.hpp  NumberCurrencyStyle.cpp  NumberCurrencyStyle.hpp  NumberCurrencySymbol.cpp  NumberCurrencySymbol.hpp  NumberDateStyle.cpp  NumberDateStyle.hpp  NumberDay.cpp  NumberDay.hpp  NumberHours.cpp  NumberHours.hpp  (+119 more)
ods/ndff/: CellNote.hpp  Container.cpp  Container.hpp  FileEntryInfo.cpp  FileEntryInfo.hpp  Property.cpp  Property.hpp  decl.hxx  ndff.cc  ndff.hh
quazip/: CMakeLists.txt  JlCompress.h  ioapi.h  quaadler32.h  quacrc32.h  quagzipfile.cpp  quagzipfile.h  quaziodevice.cpp  quazip_global.h  quazipdir.cpp  quazipfile.h  quazipfileinfo.cpp  quazipnewinfo.cpp  unzip.h  zip.h
sample/: CMakeLists.txt  Invoice.cpp  Invoice.ods  examples1.cc  examples1.hh  examples2.cc  examples2.hh  main.cpp  util.cc  util.hh
sample/test_files/: Borders.ods  ColorsAndUnderline.ods  Currency.ods  Date.ods  Formula.ods  FormulaCustom2.ods  HAlignment.ods  Time.ods
sample/test_files/Formula/: content.xml  meta.xml  settings.xml  styles.xml
sample/util/: Invoice.cpp  Invoice.hpp  Item.cpp  Item.hpp  util.cc  util.hh
zlib/: .gitignore  CMakeLists.txt  Makefile.in  configure  gzguts.h  gzlib.c  zlib.h  zlib.pro
zlib/test/: CMakeLists.txt
